# grm

./: Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: release.yml
src/: main.rs
