[package]
name = "grm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
url = "2.5"
walkdir = "2.5"
whoami = { version = "1.6", default-features = false }

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
