[package]
name = "grm"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
url = "2.5"
walkdir = "2.5"
whoami = { version = "2.1", default-features = false }

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
